c2prj1_cards/grade.txt
Grading at Tue Aug  7 06:47:54 UTC 2018
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:133:12: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     return temp.value=0;
            ^
cards.c:136:12: error: incompatible types when returning type ‘unsigned int’ but ‘card_t {aka struct card_tag}’ was expected
     return temp.value=VALUE_JACK
            ^
cards.c:137:3: error: expected ‘;’ before ‘return’
   return temp;
   ^
cards.c:138:1: error: expected declaration or statement at end of input
 }
 ^
cards.c:138:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
